--- a/Odin_project/HTML and CSS/Youtube Page/styles/style.css
+++ b/Odin_project/HTML and CSS/Youtube Page/styles/style.css
@@ -61,6 +61,8 @@ input[type=text]{
 
 .content_con{
 	display: flex;
+	width: 100%;
+	overflow: hidden;
 }
 
 main{
@@ -68,7 +70,6 @@ main{
 	padding: 4vh 0 4vh 3vw;
 }
 .comments{
-	border: 1px solid gold;
 	padding-top: 3vh;
 	width: 97%;
 }
@@ -88,7 +89,6 @@ main{
 	margin-bottom: 1.5vh;
 }
 .intro img{
-	padding-bottom: 0;
 	position: absolute;
 	bottom: 0;
 	right: 0;
@@ -98,29 +98,50 @@ main{
 	padding-top: 3vh;
 	position: relative;
 }
+.details .show{
+	margin: 2vh 0 2vh 5.5vw;
+	font-size: 0.9rem;
+	color: #717171;
+}
 .details img{
 	float: left;
 	margin-right: 1vw;
+	margin-bottom: 5vh;
 }
 .name{
-	display: block;
+	display: inline-block;
 	font-weight: bold;
 	font-size: 0.95rem;
 }
 .date{
-	display: block;
+	display: inline-block;
 	font-size: 0.9rem;
-	margin: 0.8vh 0 3.5vh;
+	margin: 0.8vh 0 1vh;
 	color: #717171;
 }
 .text{
-	margin-bottom: 3.5vh;
+	display: block;
+	padding-left: 5vw;
+}
+.reply{
+	display: inline-block;
+	font-size: 0.85rem;
+	color: #717171;
+	margin-bottom: 1vh;
+	padding-left: 0vw;
+	margin-top: 2vh;
+}
+.allrep{
+	display: inline-block;
+	font-weight: bold;
+	margin-bottom: 3vh;
+	padding-left: 5vw;
 }
 .subscribe{
 	display: inline-block;
 	position: absolute;
 	top: 3vh;
-	right: 0;
+	right: 0;3
 	background-color: #ff0000;
 	color: white;
 	font-weight: 600;
